--- a/docker-test/Dockerfile
+++ b/docker-test/Dockerfile
@@ -1,19 +1,12 @@
-# STEP 1 build static website
-FROM node:19.2-alpine as builder
+FROM node:alpine as builder
 RUN apk update && apk add --no-cache make git
-# Create app directory
 WORKDIR /app
-# Install app dependencies
-COPY package*.json package-lock.json /app/
-RUN cd /app && npm install
-# Copy project files into the docker image
+COPY package*.json /app/
+RUN cd /app && npm set progress=false && npm install
 COPY .  /app
-RUN cd /app && npm run build
-# STEP 2 build a small nginx image with static website
+RUN cd /app && npm run build -- --configuration=production
 FROM nginx:alpine
-## Remove default nginx website
 RUN rm -rf /usr/share/nginx/html/*
-## From 'builder' copy website to default nginx public folder
-COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=builder /app/dist/docker-test /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
