added angular project and its docker file

--- a/docker-test/Dockerfile
+++ b/docker-test/Dockerfile
@@ -7,6 +7,7 @@ COPY .  /app
 RUN cd /app && npm run build -- --configuration=production
 FROM nginx:alpine
 RUN rm -rf /usr/share/nginx/html/*
+COPY nginx.conf /etc/nginx/nginx.conf
 COPY --from=builder /app/dist/docker-test /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
